@@ -53,27 +53,26 @@ store_epics = calib_repeat
 # FILTERING
 # 
 # By default, all xtc data is Translated and many ndarrays that user modules (if any) 
-# add are translated. Filtering can occur in either the code of user modules, or
-# through options in the psana.cfg file. Here in the config file, different groups of 
-# data can be filtered. There are four options for filtering data: 
+# add are translated. The Translator can be configured to filter data based on
+# a number of criteria. There are five options for filtering data: 
 #
 #    type filtering   -  for example, exclude all cspad, regardless of the detector source
 #    source filtering -  for example, exclude any data from a given detector source
 #    key filtering    -  for example, include only ndarrays with a given key string
 #    calibration      -  do not translate original xtc if a calibrated version is found
+#    eventkey filtering -very fine control over filtering - specify type,src and key
 #
 # Type filtering is based on sets of Psana data types. If you know what detectors or 
 # devices to filter, leave type filtering alone and go to src_filter. 
 #
 # Type filtering has the highest precedence, then key filtering, then source 
-# filtering, and lastly calibration filtering. When the Translator sees new data, 
-# it first checks the type filter. If it is a filtered type (or unknown type) no further 
-# translation occurs with the data - regardless of src or key. For data that gets 
-# past the type filter, the Translator looks at the src and key. If the key 
-# string is empty, it checks the source filter. Data with non empty key strings are 
-# handled via the key filter. If the src is filtered, but the key is not, then the
-# data will be translated. Data with the special calibration key string are handled 
-# via the calibration filtering. 
+# filtering, then "full" event key filtering, and lastly calibration filtering. When the 
+# Translator sees new data, it first checks the type filter. If it is a filtered type 
+# (or unknown type) no further translation occurs with the data - regardless of src or key. 
+# For data that gets past the type filter, the Translator looks at the src and key. The src
+# filter is only applied to data that has an empty key string. To filter data with key strings,
+# use the key filter, or full eventkey filter (if fine control is needed). Data with the special 
+# calibration key string are handled via the calibration filtering.  
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # TYPE FILTERING 
@@ -306,6 +305,20 @@ key_filter = include all
 # setting key_filter = include keyA does not turn off translation of data without keys.
 # Of all the data with keys, only those where the key is keyA will be translated.
 #
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# EVENTKEY FILTERING
+#
+# One can also filter data based on the event key. The default is
+#
+# eventkey_filter = include all
+#
+# but one could do
+#
+# eventkey_filter = exclude Frame__xtcav Frame__yag3
+#
+# that is, one can provide a list of event keys, which are (type, src, keystring) triplets, and
+# the final key string is optional. The three items, type, src, keystring, must be separated by
+# double underscores, i.e: __
 
 # ---------------------------------------
 # SPLIT INTO SEPARTE HDF5 FILES BASED ON CALIB CYCLES
